CargoConsoleMenu localization - every category of type "cargoProduct" was edited - file "cargoproduct-categories.ftl" was added to russian localization to localize categories of cargoProduct - CargoConsoleMenu.xaml.cs got tweaks which prevent issues with strings comparisons

--- a/Resources/Prototypes/ADT/KD/Cargo/VectorCrate.yml
+++ b/Resources/Prototypes/ADT/KD/Cargo/VectorCrate.yml
@@ -5,5 +5,5 @@
 #    state: icon
 #  product: CrateArmoryVector
 #  cost: 4000
-#  category: Armory
+#  category: cargoproduct-category-name-armory
 #  group: market
