--- a/Resources/Prototypes/ADT/Catalog/Fills/Cargo/cargo_service.yml
+++ b/Resources/Prototypes/ADT/Catalog/Fills/Cargo/cargo_service.yml
@@ -5,5 +5,5 @@
     state: base
   product: ADTCrateVendingMachineRestockStyleoMatFilled
   cost: 4000
-  category: Service
+  category: cargoproduct-category-name-service
   group: market
