--- a/Resources/Prototypes/Catalog/Cargo/cargo_cargo.yml
+++ b/Resources/Prototypes/Catalog/Cargo/cargo_cargo.yml
@@ -5,7 +5,7 @@
     state: catwalk_preview
   product: CargoPallet
   cost: 250
-  category: Cargo
+  category: cargoproduct-category-name-cargo
   group: market
 
 - type: cargoProduct
@@ -15,7 +15,7 @@
     state: orebox
   product: OreBox
   cost: 500
-  category: Cargo
+  category: cargoproduct-category-name-cargo
   group: market
 
 - type: cargoProduct
@@ -25,7 +25,7 @@
     state: icon
   product: CrateCargoLuxuryHardsuit
   cost: 15000
-  category: Cargo
+  category: cargoproduct-category-name-cargo
   group: market
 
 
@@ -38,5 +38,5 @@
     state: icon
   product: ADTCargoUtilisatorComplectCrate
   cost: 5000
-  category: Cargo
+  category: cargoproduct-category-name-cargo
   group: market
